syntax = "proto3";

option csharp_namespace = "CustomerService";

service GrpcCustomer {
    rpc GetAllCustomers (GetAllRequest) returns (CustomerResponse);
}

message GetAllRequest {}

message GrpcCustomerModel{
    int32 customerId = 1;
    string name = 2;
    string email = 3;
}

message CustomerResponse {
    repeated GrpcCustomerModel customer = 1;
}